# GIAIC-SAT-Afternoon

./: README.md
Class 1/Assignments/Growth Mindset Challenge/: app.py
Class 2/Assignments/unit-convertor/: unit-convertor.py
Class 3/Assignments/Password-Strength-Meter/: pass.py
Class 4/Assignment/: Readme.md
Class 4/Assignment/Python Coding challenge/: main.py
Class 4/Class 4 Code/: main.py  pyproject.toml
Class 5/Class 5 code/: Class_5_Code.ipynb  app.py  cal.py  test_app.py
Class 6/Assignment/secure_data_encryption/: README.md  data.json  pyproject.toml  users.json
Class 6/Class 6 code/: Revision.ipynb
Class 7/Class 7 code/: Code.ipynb
Project 4 Assignments/: Readme.md
